<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            style="@style/indent"
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_text"
            android:inputType="textNoSuggestions" />

        <TextView
            style="@style/header"
            android:layout_marginTop="16dp"
            android:text="@string/toppings_header"/>

        <CheckBox
            style="@style/content"
            android:id="@+id/whipped_cream_checkbox"
            android:text="@string/whipped_cream" />

        <CheckBox
            style="@style/content"
            android:id="@+id/chocolate_checkbox"
            android:text="@string/chocolate"/>

        <CheckBox
            style="@style/content"
            android:id="@+id/cinnamon_checkbox"
            android:text="@string/cinnamon"/>

        <CheckBox
            style="@style/content"
            android:id="@+id/caramel_checkbox"
            android:text="@string/caramel"/>

        <TextView
            style="@style/header"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity_header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/content"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                style="@style/content"
                android:id="@+id/quantity_text_view"
                android:text="0"/>

            <Button
                style="@style/content"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

        <TextView
            style="@style/header"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/price_header" />

        <TextView
            style="@style/content"
            android:id="@+id/display_text_view"
            android:text="@string/total_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/content"
                android:id="@+id/check_button"
                android:layout_marginTop="16dp"
                android:onClick="checkOrder"
                android:text="@string/check_button" />

            <Button
                style="@style/content"
                android:id="@+id/order_button"
                android:layout_marginTop="16dp"
                android:onClick="sendOrder"
                android:text="@string/order_button"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
